--- a/index.html
+++ b/index.html
@@ -45,9 +45,6 @@ html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: mo
 #continueBtn { margin-top:30px; font-size:26px; padding:15px 40px; border:none; border-radius:10px; cursor:pointer; color:#fff; background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; }
 /* ================== VERSION LABEL ================== */
 #versionLabel { position:fixed; top:10px; right:10px; font-size:16px; color:rgba(255,255,255,0.3); font-weight:bold; z-index:1002; pointer-events:none; }
-/* ================== EASTER EGG ================== */
-#easterEgg { position: fixed; top: 0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); color:red; font-size:150px; font-weight:bold; display:flex; justify-content:center; align-items:center; z-index:2000; display:none; text-transform:uppercase; opacity:0; animation:fadeShake 5s forwards; }
-@keyframes fadeShake { 0%{opacity:0; transform:translateX(0);} 10%{opacity:1; transform:translateX(-5px);} 20%{transform:translateX(5px);} 30%{transform:translateX(-5px);} 40%{transform:translateX(5px);} 50%{transform:translateX(-5px);} 60%{transform:translateX(5px);} 70%{transform:translateX(-5px);} 80%{transform:translateX(5px);} 90%{transform:translateX(-5px);} 100%{opacity:0; transform:translateX(0);} }
 /* ================== PAUSE SCREEN ================== */
 #pauseScreen { position: fixed; top: 0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.85); color:#fff; display: none; flex-direction: column; justify-content: center; align-items: center; z-index:2000; text-align:center; opacity:0; backdrop-filter: blur(5px); animation-fill-mode: forwards; }
 #pauseScreen.fadeIn { animation: fadeIn 0.5s forwards; }
@@ -57,7 +54,7 @@ html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: mo
 #pauseText { font-size:60px; font-weight:bold; margin-bottom:30px; text-shadow:0 0 20px #fff; }
 #continueGameBtn, #endGameBtn { font-size:28px; padding:15px 40px; margin:10px; border:none; border-radius:10px; cursor:pointer; color:#fff; background:linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; }
 /* ================== PAUSE BUTTON ================== */
-#pauseBtn { position: fixed; top:10px; left:10px; font-size:28px; padding:10px 8px; border:none; border-radius:8px; background: linear-gradient(45deg,#a044ff,#6a00f4); color:#fff; cursor:pointer; z-index:1001; display:none; text-shadow:0 0 10px #fff; }
+#pauseBtn { position: fixed; top:10px; left:10px; font-size:28px; padding:10px 18px; border:none; border-radius:8px; background: linear-gradient(45deg,#a044ff,#6a00f4); color:#fff; cursor:pointer; z-index:1001; display:none; text-shadow:0 0 10px #fff; }
 /* ================== DIFFICULTY PANEL ================== */
 #difficultyPanel { display:none; position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); background:rgba(0,0,0,0.95); padding:30px 50px; border-radius:20px; text-align:center; z-index:2000; }
 #difficultyPanel h2 { font-size:36px; color:#d166ff; margin-bottom:20px; }
@@ -100,7 +97,7 @@ html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: mo
   <div id="lives">Životy: 3</div>
 </div>
 
-<div id="pauseBtn">||</div>
+<div id="pauseBtn">|  |</div>
 
 <div id="pauseScreen">
   <div id="pauseText">PAUZA</div>
@@ -190,9 +187,18 @@ function attachButtonEvents(){
   diffBtns.forEach(btn=>{
     btn.addEventListener('click', ()=>{
       const diff = btn.dataset.diff;
-      if(diff==='easy'){ spawnInterval=800; speedMultiplier=0.8; }
-      else if(diff==='normal'){ spawnInterval=500; speedMultiplier=1; }
-      else if(diff==='hard'){ spawnInterval=300; speedMultiplier=1.5; }
+      if(diff==='easy'){ 
+        spawnInterval = 900;   // lehce snazší
+        speedMultiplier = 0.7;
+      }
+      else if(diff==='normal'){ 
+        spawnInterval = 600;   // střední obtížnost
+        speedMultiplier = 0.9;
+      }
+      else if(diff==='hard'){ 
+        spawnInterval = 400;   // stará normal, hodně těžké
+        speedMultiplier = 1.2;
+      }
 
       difficultyPanel.style.display='none';
       startCountdown();
