--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@ html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: mo
 /* ================== PAUSE BUTTON ================== */
 #pauseBtn { position: fixed; top:10px; left:10px; font-size:28px; padding:10px 18px; border:none; border-radius:8px; background: linear-gradient(45deg,#a044ff,#6a00f4); color:#fff; cursor:pointer; z-index:1001; display:none; text-shadow:0 0 10px #fff; }
 
+/* ================== DIFFICULTY PANEL ================== */
+#difficultyPanel { display:none; text-align:center; margin-top:30vh; }
+#difficultyPanel button { display:block; margin:20px auto; font-size:28px; padding:15px 35px; border:none; border-radius:12px; color:#fff; font-weight:bold; text-transform:uppercase; cursor:pointer; box-shadow:0 0 10px #000,0 0 20px #000; transition: transform 0.2s; }
+#difficultyPanel button:hover { transform: scale(1.05); }
+.easyBtn { background: linear-gradient(45deg,#28a745,#218838,#71dd8a); box-shadow:0 0 10px #28a745,0 0 20px #218838; }
+.normalBtn { background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; }
+.hardBtn { background: linear-gradient(45deg,#dc3545,#c82333,#ff6b6b); box-shadow:0 0 10px #dc3545,0 0 20px #c82333; }
+.backBtn { background: linear-gradient(45deg,#6c757d,#495057,#adb5bd); box-shadow:0 0 10px #6c757d,0 0 20px #495057; }
 </style>
 </head>
 <body>
@@ -67,6 +75,13 @@ html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: mo
 <div id="versionLabel">Released 1.2.3</div>
 <button id="startBtn">START</button>
 <button id="indexBtn">INDEX</button>
+
+<div id="difficultyPanel">
+  <button class="difficultyBtn easyBtn" data-diff="easy">EASY</button>
+  <button class="difficultyBtn normalBtn" data-diff="normal">NORMAL</button>
+  <button class="difficultyBtn hardBtn" data-diff="hard">HARD</button>
+  <button id="backBtn" class="backBtn">BACK</button>
+</div>
 
 <div id="indexPanel">
   <div class="closeBtn">✖</div>
@@ -127,6 +142,10 @@ const continueGameBtn=document.getElementById('continueGameBtn');
 const endGameBtn=document.getElementById('endGameBtn');
 const continueBtn=document.getElementById('continueBtn');
 
+const difficultyPanel = document.getElementById('difficultyPanel');
+const difficultyBtns = document.querySelectorAll('.difficultyBtn');
+const backBtn = document.getElementById('backBtn');
+
 let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, gamePaused=false, startTime;
 
 // ================== LOADING SCREEN ==================
@@ -141,7 +160,7 @@ window.addEventListener('load',()=>{
 
 // ================== BUTTON LOGIC ==================
 function attachButtonEvents(){
-  startBtn.addEventListener('click',startCountdown);
+  // START přesunut do difficulty panelu
   indexBtn.addEventListener('click',(e)=>{
     e.stopPropagation();
     if(indexPanel.style.top==='30%'){ indexPanel.style.top='100%'; startBtn.style.display='block'; indexBtn.style.display='block'; }
@@ -151,19 +170,40 @@ function attachButtonEvents(){
   document.body.addEventListener('click',()=>{
     if(indexPanel.style.top==='30%'){ indexPanel.style.top='100%'; startBtn.style.display='block'; indexBtn.style.display='block'; }
   });
-  continueBtn.addEventListener('click',()=>{
-    endScreen.style.display='none'; startBtn.style.display='block'; indexBtn.style.display='block'; versionLabel.style.display='block';
-  });
+  continueBtn.addEventListener('click',()=>{ endScreen.style.display='none'; startBtn.style.display='block'; indexBtn.style.display='block'; versionLabel.style.display='block'; });
   pauseBtn.addEventListener('click', togglePause);
   continueGameBtn.addEventListener('click', togglePause);
   endGameBtn.addEventListener('click', endGame);
+
+  // ================== DIFFICULTY LOGIC ==================
+  startBtn.addEventListener('click', () => {
+    startBtn.style.display = 'none';
+    indexBtn.style.display = 'none';
+    difficultyPanel.style.display = 'block';
+  });
+
+  backBtn.addEventListener('click', () => {
+    difficultyPanel.style.display = 'none';
+    startBtn.style.display = 'block';
+    indexBtn.style.display = 'block';
+  });
+
+  difficultyBtns.forEach(btn => {
+    btn.addEventListener('click', () => {
+      const diff = btn.dataset.diff;
+      difficultyPanel.style.display = 'none';
+      // Nastavení multiplikátoru rychlosti podle obtížnosti
+      if(diff==='easy') window.bubbleSpeedMultiplier = 0.85;
+      else if(diff==='normal') window.bubbleSpeedMultiplier = 1;
+      else if(diff==='hard') window.bubbleSpeedMultiplier = 1.2;
+      startCountdown(); // spustí hru s nastavenou obtížností
+    });
+  });
 }
 
 // ================== COUNTDOWN ==================
 function startCountdown(){
   versionLabel.style.display='none';
-  startBtn.style.display='none';
-  indexBtn.style.display='none';
   countdownEl.style.display='block';
   let count=3;
   countdownEl.textContent=count;
@@ -218,7 +258,9 @@ function updateBubbles(){
 // ================== SPAWN BUBBLES ==================
 function spawnBubble(){ 
   if(!gameRunning || gamePaused) { setTimeout(spawnBubble,500); return; }
-  const elapsed=(Date.now()-startTime)/1000; const speedMultiplier=1+elapsed/120; const chance=Math.random();
+  const elapsed=(Date.now()-startTime)/1000; 
+  const speedMultiplier=(window.bubbleSpeedMultiplier || 1)*(1+elapsed/120); 
+  const chance=Math.random();
   const bubble=document.createElement('div'); bubble.classList.add('bubble');
   if(chance<=0.001){ bubble.classList.add('instawin'); bubble.textContent="?12?"; bubble.dataset.type="instawin"; }
   else if(chance<=0.016){ bubble.classList.add('invert'); bubble.textContent="!12!"; bubble.dataset.type="invert"; }
@@ -260,8 +302,10 @@ function spawnBubble(){
   setTimeout(spawnBubble,500);
 }
 
-function spawnSingleBubble(){ if(!gameRunning || gamePaused) return;
-  const elapsed=(Date.now()-startTime)/1000; const speedMultiplier=1+elapsed/120;
+function spawnSingleBubble(){ 
+  if(!gameRunning || gamePaused) return;
+  const elapsed=(Date.now()-startTime)/1000; 
+  const speedMultiplier=(window.bubbleSpeedMultiplier || 1)*(1+elapsed/120);
   const bubble=document.createElement('div'); bubble.classList.add('bubble');
   bubble.textContent="12"; bubble.dataset.type="normal";
   const size=Math.random()*60+60; bubble.style.width=size+'px'; bubble.style.height=size+'px';
