--- a/index.html
+++ b/index.html
@@ -5,23 +5,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>12 Bubbles Ultimate</title>
 <style>
-/* ================== Reset & Basic ================== */
 html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: monospace; background-color:#0a0a0a; color:#fff; }
-/* ================== LOADING SCREEN ================== */
 #loadingScreen { position: fixed; top:0; left:0; width:100%; height:100%; background:#000; display:flex; justify-content:center; align-items:center; color:#fff; font-size:50px; font-weight:bold; z-index:3000; text-align:center; animation:eyeGlow 2s ease-in-out forwards;}
 @keyframes eyeGlow { 0% { opacity:0.2; text-shadow:none; } 50% { opacity:1; text-shadow:0 0 25px #fff,0 0 50px #fff,0 0 75px #fff; } 100% { opacity:0.2; text-shadow:none; } }
-/* ================== BUTTONS ================== */
+
 #startBtn, #indexBtn { display:none; margin:0 auto; font-size:28px; padding:15px 35px; background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); border:none; border-radius:12px; color:#fff; font-weight:bold; text-transform:uppercase; cursor:pointer; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; z-index:1000; transition: transform 0.2s; }
 #startBtn:hover, #indexBtn:hover { transform: scale(1.05); }
 #startBtn { margin-top:30vh; }
 #indexBtn { margin-top:20px; }
-/* ================== COUNTDOWN & SCORE ================== */
+
 #countdown { position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); font-size:80px; color:#d166ff; text-shadow:0 0 20px #d166ff,0 0 40px #a044ff; z-index:1001; display:none; }
 #scoreContainer { position:fixed; top:20px; left:50%; transform:translateX(-50%); z-index:1001; text-align:center; display:none; }
 #highscore { font-size:20px; color:#ff0; margin-bottom:5px; }
 #score { font-size:28px; color:#d166ff; }
 #lives { font-size:20px; color:#f00; margin-top:5px; }
-/* ================== BUBBLES ================== */
+
 .bubble { width:80px; height:80px; border-radius:50%; display:flex; justify-content:center; align-items:center; font-size:24px; font-weight:bold; color:#fff; background:linear-gradient(135deg,#a044ff,#6a00f4); border:2px solid #d166ff; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff inset; position:absolute; cursor:pointer; animation:floatY 3s infinite alternate ease-in-out; transition: transform 0.2s; }
 .bubble:hover { transform: scale(1.1); }
 .bubble.rare2x { background: linear-gradient(135deg,#ffff00,#a044ff); color:#000; font-size:28px; animation:floatY 2.5s infinite alternate ease-in-out; }
@@ -31,7 +29,7 @@ html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: mo
 .bubble.invert { background: linear-gradient(135deg,#fff,#000); color:#0ff; font-size:26px; animation:floatY 2.8s infinite alternate ease-in-out; }
 .bubble.instawin { background: linear-gradient(135deg,#ff0000,#ffff00); color:#000; font-size:32px; box-shadow:0 0 30px #ff0, 0 0 60px #f00; animation:floatY 1.8s infinite alternate ease-in-out; }
 @keyframes floatY { 0% { transform: translateY(0);} 100% { transform: translateY(-15px);} }
-/* ================== INDEX PANEL ================== */
+
 #indexPanel { position:fixed; top:100%; left:0; width:100%; max-height:70%; background:rgba(10,10,10,0.95); overflow-y:auto; transition:top 0.5s ease; padding:20px; z-index:999; box-shadow:0 -5px 30px #d166ff; }
 #indexPanel h2 { text-transform:uppercase; }
 #indexPanel .closeBtn { position:absolute; top:15px; right:15px; font-size:28px; cursor:pointer; color:#fff; font-weight:bold; z-index:1001; }
@@ -40,15 +38,14 @@ html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: mo
 .indexItem .desc { flex:1; }
 .indexItem .rarity { font-weight:bold; }
 @keyframes float { 0%{transform:translateY(0);} 100%{transform:translateY(-10px);} }
-/* ================== END SCREEN ================== */
+
 #endScreen { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.95); display:none; flex-direction:column; justify-content:center; align-items:center; color:#fff; font-size:40px; z-index:1500; text-align:center; }
 #continueBtn { margin-top:30px; font-size:26px; padding:15px 40px; border:none; border-radius:10px; cursor:pointer; color:#fff; background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; }
-/* ================== VERSION LABEL ================== */
+
 #versionLabel { position:fixed; top:10px; right:10px; font-size:16px; color:rgba(255,255,255,0.3); font-weight:bold; z-index:1002; pointer-events:none; }
-/* ================== EASTER EGG ================== */
-#easterEgg { position: fixed; top: 0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); color:red; font-size:150px; font-weight:bold; display:flex; justify-content:center; align-items:center; z-index:2000; display:none; text-transform:uppercase; opacity:0; animation:fadeShake 5s forwards; }
-@keyframes fadeShake { 0%{opacity:0; transform:translateX(0);} 10%{opacity:1; transform:translateX(-5px);} 20%{transform:translateX(5px);} 30%{transform:translateX(-5px);} 40%{transform:translateX(5px);} 50%{transform:translateX(-5px);} 60%{transform:translateX(5px);} 70%{transform:translateX(-5px);} 80%{transform:translateX(5px);} 90%{transform:translateX(-5px);} 100%{opacity:0; transform:translateX(0);} }
-/* ================== PAUSE SCREEN ================== */
+
+#pauseBtn { position: fixed; top:10px; left:10px; font-size:28px; padding:10px 18px; border:none; border-radius:8px; background: linear-gradient(45deg,#a044ff,#6a00f4); color:#fff; cursor:pointer; z-index:1001; display:none; text-shadow:0 0 10px #fff; }
+
 #pauseScreen { position: fixed; top: 0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.85); color:#fff; display: none; flex-direction: column; justify-content: center; align-items: center; z-index:2000; text-align:center; opacity:0; backdrop-filter: blur(5px); animation-fill-mode: forwards; }
 #pauseScreen.fadeIn { animation: fadeIn 0.5s forwards; }
 #pauseScreen.fadeOut { animation: fadeOut 0.5s forwards; }
@@ -56,17 +53,14 @@ html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: mo
 @keyframes fadeOut { 0% { opacity:1; transform:scale(1);} 100%{ opacity:0; transform:scale(0.9);} }
 #pauseText { font-size:60px; font-weight:bold; margin-bottom:30px; text-shadow:0 0 20px #fff; }
 #continueGameBtn, #endGameBtn { font-size:28px; padding:15px 40px; margin:10px; border:none; border-radius:10px; cursor:pointer; color:#fff; background:linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; }
-/* ================== PAUSE BUTTON ================== */
-#pauseBtn { position: fixed; top:10px; left:10px; font-size:28px; padding:10px 18px; border:none; border-radius:8px; background: linear-gradient(45deg,#a044ff,#6a00f4); color:#fff; cursor:pointer; z-index:1001; display:none; text-shadow:0 0 10px #fff; }
 
-/* ================== DIFFICULTY PANEL ================== */
 #difficultyPanel { display:none; text-align:center; margin-top:30vh; }
 #difficultyPanel button { display:block; margin:20px auto; font-size:28px; padding:15px 35px; border:none; border-radius:12px; color:#fff; font-weight:bold; text-transform:uppercase; cursor:pointer; box-shadow:0 0 10px #000,0 0 20px #000; transition: transform 0.2s; }
 #difficultyPanel button:hover { transform: scale(1.05); }
 .easyBtn { background: linear-gradient(45deg,#28a745,#218838,#71dd8a); box-shadow:0 0 10px #28a745,0 0 20px #218838; }
 .normalBtn { background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; }
-.hardBtn { background: linear-gradient(45deg,#dc3545,#c82333,#ff6b6b); box-shadow:0 0 10px #dc3545,0 0 20px #c82333; }
-.backBtn { background: linear-gradient(45deg,#6c757d,#495057,#adb5bd); box-shadow:0 0 10px #6c757d,0 0 20px #495057; }
+.hardBtn { background: linear-gradient(45deg,#dc3545,#b02a37,#ff6b6b); box-shadow:0 0 10px #dc3545,0 0 20px #b02a37; }
+.backBtn { background: linear-gradient(45deg,#6c757d,#5a6268,#adb5bd); box-shadow:0 0 10px #6c757d,0 0 20px #5a6268; }
 </style>
 </head>
 <body>
@@ -77,10 +71,10 @@ html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: mo
 <button id="indexBtn">INDEX</button>
 
 <div id="difficultyPanel">
-  <button class="difficultyBtn easyBtn" data-diff="easy">EASY</button>
-  <button class="difficultyBtn normalBtn" data-diff="normal">NORMAL</button>
-  <button class="difficultyBtn hardBtn" data-diff="hard">HARD</button>
-  <button id="backBtn" class="backBtn">BACK</button>
+  <button class="easyBtn" data-diff="easy">EASY</button>
+  <button class="normalBtn" data-diff="normal">NORMAL</button>
+  <button class="hardBtn" data-diff="hard">HARD</button>
+  <button class="backBtn" id="backBtn">BACK</button>
 </div>
 
 <div id="indexPanel">
@@ -103,7 +97,6 @@ html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: mo
 </div>
 
 <div id="pauseBtn">|  |</div>
-
 <div id="pauseScreen">
   <div id="pauseText">PAUZA</div>
   <button id="continueGameBtn">Pokračovat</button>
@@ -115,12 +108,9 @@ html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: mo
   <button id="continueBtn">POKRAČOVAT</button>
 </div>
 
-<div id="easterEgg"></div>
-
 <audio id="popSound" src="https://www.soundjay.com/button/sounds/button-16.mp3"></audio>
 
 <script>
-// ================== ELEMENTS ==================
 const startBtn=document.getElementById('startBtn');
 const indexBtn=document.getElementById('indexBtn');
 const indexPanel=document.getElementById('indexPanel');
@@ -133,7 +123,6 @@ const popSound=document.getElementById('popSound');
 const endScreen=document.getElementById('endScreen');
 const finalScoreText=document.getElementById('finalScoreText');
 const versionLabel=document.getElementById('versionLabel');
-const easterEl=document.getElementById('easterEgg');
 const closeBtn=document.querySelector('#indexPanel .closeBtn');
 
 const pauseBtn=document.getElementById('pauseBtn');
@@ -142,13 +131,13 @@ const continueGameBtn=document.getElementById('continueGameBtn');
 const endGameBtn=document.getElementById('endGameBtn');
 const continueBtn=document.getElementById('continueBtn');
 
-const difficultyPanel = document.getElementById('difficultyPanel');
-const difficultyBtns = document.querySelectorAll('.difficultyBtn');
-const backBtn = document.getElementById('backBtn');
+const difficultyPanel=document.getElementById('difficultyPanel');
+const difficultyBtns=document.querySelectorAll('#difficultyPanel button[data-diff]');
+const backBtn=document.getElementById('backBtn');
 
 let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, gamePaused=false, startTime;
 
-// ================== LOADING SCREEN ==================
+// LOADING
 window.addEventListener('load',()=>{
   setTimeout(()=>{
     loadingScreen.style.display='none';
@@ -158,50 +147,31 @@ window.addEventListener('load',()=>{
   },2000);
 });
 
-// ================== BUTTON LOGIC ==================
+// BUTTON LOGIC
 function attachButtonEvents(){
-  // START přesunut do difficulty panelu
-  indexBtn.addEventListener('click',(e)=>{
-    e.stopPropagation();
-    if(indexPanel.style.top==='30%'){ indexPanel.style.top='100%'; startBtn.style.display='block'; indexBtn.style.display='block'; }
-    else { indexPanel.style.top='30%'; startBtn.style.display='none'; indexBtn.style.display='none'; }
+  startBtn.addEventListener('click',()=>{ startBtn.style.display='none'; indexBtn.style.display='none'; difficultyPanel.style.display='block'; });
+  backBtn.addEventListener('click',()=>{ difficultyPanel.style.display='none'; startBtn.style.display='block'; indexBtn.style.display='block'; });
+
+  difficultyBtns.forEach(btn=>{
+    btn.addEventListener('click',()=>{
+      const diff=btn.dataset.diff;
+      difficultyPanel.style.display='none';
+      if(diff==='easy') window.bubbleSpeedMultiplier=0.7;
+      else if(diff==='normal') window.bubbleSpeedMultiplier=1;
+      else if(diff==='hard') window.bubbleSpeedMultiplier=1.2;
+      startCountdown();
+    });
   });
-  closeBtn.addEventListener('click',(e)=>{ e.stopPropagation(); indexPanel.style.top='100%'; startBtn.style.display='block'; indexBtn.style.display='block'; });
-  document.body.addEventListener('click',()=>{
-    if(indexPanel.style.top==='30%'){ indexPanel.style.top='100%'; startBtn.style.display='block'; indexBtn.style.display='block'; }
-  });
+
+  indexBtn.addEventListener('click',(e)=>{ e.stopPropagation(); indexPanel.style.top=(indexPanel.style.top==='30%'?'100%':'30%'); startBtn.style.display='none'; indexBtn.style.display='none'; });
+  closeBtn.addEventListener('click',()=>{ indexPanel.style.top='100%'; startBtn.style.display='block'; indexBtn.style.display='block'; });
   continueBtn.addEventListener('click',()=>{ endScreen.style.display='none'; startBtn.style.display='block'; indexBtn.style.display='block'; versionLabel.style.display='block'; });
   pauseBtn.addEventListener('click', togglePause);
   continueGameBtn.addEventListener('click', togglePause);
   endGameBtn.addEventListener('click', endGame);
-
-  // ================== DIFFICULTY LOGIC ==================
-  startBtn.addEventListener('click', () => {
-    startBtn.style.display = 'none';
-    indexBtn.style.display = 'none';
-    difficultyPanel.style.display = 'block';
-  });
-
-  backBtn.addEventListener('click', () => {
-    difficultyPanel.style.display = 'none';
-    startBtn.style.display = 'block';
-    indexBtn.style.display = 'block';
-  });
-
-  difficultyBtns.forEach(btn => {
-    btn.addEventListener('click', () => {
-      const diff = btn.dataset.diff;
-      difficultyPanel.style.display = 'none';
-      // Nastavení multiplikátoru rychlosti podle obtížnosti
-      if(diff==='easy') window.bubbleSpeedMultiplier = 0.85;
-      else if(diff==='normal') window.bubbleSpeedMultiplier = 1;
-      else if(diff==='hard') window.bubbleSpeedMultiplier = 1.2;
-      startCountdown(); // spustí hru s nastavenou obtížností
-    });
-  });
 }
 
-// ================== COUNTDOWN ==================
+// COUNTDOWN
 function startCountdown(){
   versionLabel.style.display='none';
   countdownEl.style.display='block';
@@ -220,7 +190,7 @@ function startCountdown(){
   },1000);
 }
 
-// ================== GAME LOGIC ==================
+// GAME
 function startGame(){
   score=0; lives=3; bubbles=[]; gameRunning=true; gamePaused=false; startTime=Date.now();
   scoreEl.textContent="Skóre: "+score; livesEl.textContent="Životy: "+lives;
@@ -238,7 +208,6 @@ function togglePause(){
   }
 }
 
-// ================== UPDATE BUBBLES ==================
 function updateBubbles(){
   if(!gameRunning) return;
   if(!gamePaused){
@@ -255,7 +224,6 @@ function updateBubbles(){
   requestAnimationFrame(updateBubbles);
 }
 
-// ================== SPAWN BUBBLES ==================
 function spawnBubble(){ 
   if(!gameRunning || gamePaused) { setTimeout(spawnBubble,500); return; }
   const elapsed=(Date.now()-startTime)/1000; 
@@ -320,12 +288,10 @@ function spawnSingleBubble(){
   bubbles.push(bubble);
 }
 
-// ================== END GAME ==================
 function endGame(){
   gameRunning=false; bubbles.forEach(b=>b.remove()); bubbles=[];
   scoreContainer.style.display='none'; pauseBtn.style.display='none'; pauseScreen.style.display='none';
-  if(score===12 || score<=3){ easterEl.textContent=(score===12?'12':'BRUH'); easterEl.style.display='flex'; easterEl.style.animation='fadeShake 5s forwards'; setTimeout(()=>{ easterEl.style.display='none'; showEndScreen(); },5000);}
-  else showEndScreen();
+  showEndScreen();
 }
 
 function showEndScreen(){ finalScoreText.textContent="Tvé skóre: "+score; endScreen.style.display='flex'; }
